--- a/package.json
+++ b/package.json
@@ -3,30 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node node_modules/.bin/next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3",
-    "next": "14.1.0",
-    "next-auth": "^4.24.6",
-    "package-lock.json": "^1.0.0",
-    "razorpay": "^0.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.0.1",
-    "react-slick": "^0.30.2",
-    "react-toastify": "^10.0.4",
-    "react-top-loading-bar": "^2.3.1",
-    "slick-carousel": "^1.8.1"
+    "next": "13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
